crt: msvcrt.def.in: Do not export symbol __CxxCallUnwindDelDtor on X64
Symbol __CxxCallUnwindDelDtor is not available in any X64 version of
msvcrt.dll library. So do not export it on X64.

Fixes commit 2924b5733903a15520f4a430a2c0c3f38ac098e9.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -1187,7 +1187,7 @@ _CrtSetReportFile
 _CrtSetReportHook
 _CrtSetReportHook2
 _CrtSetReportMode
-F_X86_ANY(__CxxCallUnwindDelDtor)
+F_I386(__CxxCallUnwindDelDtor)
 __CxxFrameHandler3
 __daylight
 __dstbias
