--- a/mingw-w64-crt/lib64/msvcr80.def.in
+++ b/mingw-w64-crt/lib64/msvcr80.def.in
@@ -959,3 +959,598 @@ wprintf
 __ms_wprintf == wprintf
 wscanf
 __ms_wscanf == wscanf
+_CRT_RTC_INIT
+_CRT_RTC_INITW
+_CreateFrameInfo
+_FindAndUnlinkFrame
+_GetImageBase
+_GetThrowImageBase
+_IsExceptionObjectToBeDestroyed
+_SetImageBase
+_SetThrowImageBase
+__AdjustPointer
+__BuildCatchObject
+__BuildCatchObjectHelper
+__CxxCallUnwindDelDtor
+__CxxCallUnwindDtor
+__CxxCallUnwindStdDelDtor
+__CxxCallUnwindVecDtor
+__CxxDetectRethrow
+__CxxExceptionFilter
+__CxxFrameHandler2
+__CxxFrameHandler3
+__CxxQueryExceptionSize
+__CxxRegisterExceptionObject
+__CxxUnregisterExceptionObject
+__FrameUnwindFilter
+__NLG_Dispatch2
+__NLG_Return2
+__STRINGTOLD_L
+__TypeMatch
+___mb_cur_max_l_func
+__clean_type_info_names_internal
+__create_locale
+__crt_debugger_hook
+__daylight
+__dstbias
+__fls_getvalue
+__fls_setvalue
+__free_locale
+__get_app_type
+__get_current_locale
+__get_flsindex
+__get_tlsindex
+__iswcsym
+__iswcsymf
+__lc_clike DATA
+__lconv DATA
+__p___argc
+__p___argv
+__p___initenv
+__p___mb_cur_max
+__p___wargv
+__p___winitenv
+__p__acmdln
+__p__amblksiz
+__p__commode
+__p__daylight
+__p__dstbias
+__p__environ
+__p__fmode
+__p__iob
+__p__mbcasemap
+__p__mbctype
+__p__osplatform
+__p__osver
+__p__pctype
+__p__pgmptr
+__p__pwctype
+__p__timezone
+__p__tzname
+__p__wcmdln
+__p__wenviron
+__p__winmajor
+__p__winminor
+__p__winver
+__p__wpgmptr
+__report_gsfailure
+__set_flsgetvalue
+__strncnt
+__swprintf_l
+__sys_errlist
+__sys_nerr
+__timezone
+__tzname
+__unDNameHelper
+__vswprintf_l
+__wcserror_s
+__wcsncnt
+_access_s
+_aligned_msize
+_aligned_offset_recalloc
+_aligned_recalloc
+_atodbl_l
+_atof_l
+_atoflt
+_atoflt_l
+_atoi64_l
+_atoi_l
+_atol_l
+_atoldbl_l
+_byteswap_uint64
+_byteswap_ulong
+_byteswap_ushort
+_calloc_crt
+_cgets_s
+_cgetws_s
+_configthreadlocale
+_controlfp_s
+_cprintf_l
+_cprintf_p
+_cprintf_p_l
+_cprintf_s
+_cprintf_s_l
+_create_locale
+_cscanf_l
+_cscanf_s
+_cscanf_s_l
+_ctime32_s
+_ctime64_s
+_cwprintf_l
+_cwprintf_p
+_cwprintf_p_l
+_cwprintf_s
+_cwprintf_s_l
+_cwscanf_l
+_cwscanf_s
+_cwscanf_s_l
+_decode_pointer
+_dosmaperr
+_dupenv_s
+_ecvt_s
+_encode_pointer
+_encoded_null
+_fcvt_s
+_fpieee_flt
+_fprintf_l
+_fprintf_p
+_fprintf_p_l
+_fprintf_s_l
+_free_locale
+_freea
+_freea_s
+_freefls
+_fscanf_l
+_fscanf_s_l
+_fseeki64
+_ftelli64
+_ftime32
+_ftime32_s
+_ftime64_s
+_futime32
+_fwprintf_l
+_fwprintf_p
+_fwprintf_p_l
+_fwprintf_s_l
+_fwscanf_l
+_fwscanf_s_l
+_gcvt_s
+_get_amblksiz
+_get_current_locale
+_get_daylight
+_get_doserrno
+_get_dstbias
+_get_errno
+_get_fmode
+_get_invalid_parameter_handler
+_get_osplatform
+_get_osver
+_get_output_format
+_get_pgmptr
+_get_printf_count_output
+_get_purecall_handler
+_get_terminate
+_get_timezone
+_get_tzname
+_get_unexpected
+_get_winmajor
+_get_winminor
+_get_winver
+_get_wpgmptr
+_getptd
+_getws_s
+_gmtime32_s
+_gmtime64_s
+_i64toa_s
+_i64tow_s
+_initptd
+_initterm_e
+_invalid_parameter
+_invalid_parameter_noinfo
+_invoke_watson
+_isalnum_l
+_isalpha_l
+_iscntrl_l
+_isctype_l
+_isdigit_l
+_isgraph_l
+_isleadbyte_l
+_islower_l
+_ismbbalnum_l
+_ismbbalpha_l
+_ismbbgraph_l
+_ismbbkalnum_l
+_ismbbkana_l
+_ismbbkprint_l
+_ismbbkpunct_l
+_ismbblead_l
+_ismbbprint_l
+_ismbbpunct_l
+_ismbbtrail_l
+_ismbcalnum_l
+_ismbcalpha_l
+_ismbcdigit_l
+_ismbcgraph_l
+_ismbchira_l
+_ismbckata_l
+_ismbcl0_l
+_ismbcl1_l
+_ismbcl2_l
+_ismbclegal_l
+_ismbclower_l
+_ismbcprint_l
+_ismbcpunct_l
+_ismbcspace_l
+_ismbcsymbol_l
+_ismbcupper_l
+_ismbslead_l
+_ismbstrail_l
+_isprint_l
+_ispunct_l
+_isspace_l
+_isupper_l
+_iswalnum_l
+_iswalpha_l
+_iswcntrl_l
+_iswcsym_l
+_iswcsymf_l
+_iswctype_l
+_iswdigit_l
+_iswgraph_l
+_iswlower_l
+_iswprint_l
+_iswpunct_l
+_iswspace_l
+_iswupper_l
+_iswxdigit_l
+_isxdigit_l
+_itoa_s
+_itow_s
+_lfind_s
+_localtime32_s
+_localtime64_s
+_lsearch_s
+_ltoa_s
+_ltow_s
+_makepath_s
+_malloc_crt
+_mbbtombc_l
+_mbbtype_l
+_mbccpy_l
+_mbccpy_s
+_mbccpy_s_l
+_mbcjistojms_l
+_mbcjmstojis_l
+_mbclen_l
+_mbctohira_l
+_mbctokata_l
+_mbctolower_l
+_mbctombb_l
+_mbctoupper_l
+_mblen_l
+_mbsbtype_l
+_mbscat_s
+_mbscat_s_l
+_mbschr_l
+_mbscmp_l
+_mbscoll_l
+_mbscpy_s
+_mbscpy_s_l
+_mbscspn_l
+_mbsdec_l
+_mbsicmp_l
+_mbsicoll_l
+_mbsinc_l
+_mbslen_l
+_mbslwr_l
+_mbslwr_s
+_mbslwr_s_l
+_mbsnbcat_l
+_mbsnbcat_s
+_mbsnbcat_s_l
+_mbsnbcmp_l
+_mbsnbcnt_l
+_mbsnbcoll_l
+_mbsnbcpy_l
+_mbsnbcpy_s
+_mbsnbcpy_s_l
+_mbsnbicmp_l
+_mbsnbicoll_l
+_mbsnbset_l
+_mbsnbset_s
+_mbsnbset_s_l
+_mbsncat_l
+_mbsncat_s
+_mbsncat_s_l
+_mbsnccnt_l
+_mbsncmp_l
+_mbsncoll_l
+_mbsncpy_l
+_mbsncpy_s
+_mbsncpy_s_l
+_mbsnextc_l
+_mbsnicmp_l
+_mbsnicoll_l
+_mbsninc_l
+_mbsnlen
+_mbsnlen_l
+_mbsnset_l
+_mbsnset_s
+_mbsnset_s_l
+_mbspbrk_l
+_mbsrchr_l
+_mbsrev_l
+_mbsset_l
+_mbsset_s
+_mbsset_s_l
+_mbsspn_l
+_mbsspnp_l
+_mbsstr_l
+_mbstok_l
+_mbstok_s
+_mbstok_s_l
+_mbstowcs_l
+_mbstowcs_s_l
+_mbstrlen_l
+_mbstrnlen
+_mbstrnlen_l
+_mbsupr_l
+_mbsupr_s
+_mbsupr_s_l
+_mbtowc_l
+_memicmp_l
+_mktemp_s
+_printf_l
+_printf_p
+_printf_p_l
+_printf_s_l
+_putenv_s
+_realloc_crt
+_recalloc
+_recalloc_crt
+_scanf_l
+_scanf_s_l
+_scprintf_l
+_scprintf_p
+_scprintf_p_l
+_scwprintf_l
+_scwprintf_p
+_scwprintf_p_l
+_searchenv_s
+_set_abort_behavior
+_set_amblksiz
+_set_controlfp
+_set_doserrno
+_set_errno
+_set_fmode
+_set_malloc_crt_max_wait
+_set_output_format
+_set_printf_count_output
+_set_purecall_handler
+_snprintf_c
+_snprintf_c_l
+_snprintf_l
+_snprintf_s
+_snprintf_s_l
+_snscanf_l
+_snscanf_s
+_snscanf_s_l
+_snwprintf_l
+_snwprintf_s
+_snwprintf_s_l
+_snwscanf_l
+_snwscanf_s
+_snwscanf_s_l
+_sopen_s
+_splitpath_s
+_sprintf_l
+_sprintf_p
+_sprintf_p_l
+_sprintf_s_l
+_sscanf_l
+_sscanf_s_l
+_strcoll_l
+_strdate_s
+_strerror_s
+_strftime_l
+_stricmp_l
+_stricoll_l
+_strlwr_l
+_strlwr_s
+_strlwr_s_l
+_strncoll_l
+_strnicmp_l
+_strnicoll_l
+_strnset_s
+_strset_s
+_strtime_s
+_strtod_l
+_strtoi64_l
+_strtol_l
+_strtoui64_l
+_strtoul_l
+_strupr_l
+_strupr_s
+_strupr_s_l
+_strxfrm_l
+_swprintf
+_swprintf_c
+_swprintf_p
+_swprintf_p_l
+_swprintf_s_l
+_swscanf_l
+_swscanf_s_l
+_tolower_l
+_toupper_l
+_towlower_l
+_towupper_l
+_ui64toa_s
+_ui64tow_s
+_ultoa_s
+_ultow_s
+_umask_s
+_utime32
+_vcprintf
+_vcprintf_l
+_vcprintf_p
+_vcprintf_p_l
+_vcprintf_s
+_vcprintf_s_l
+_vcwprintf
+_vcwprintf_l
+_vcwprintf_p
+_vcwprintf_p_l
+_vcwprintf_s
+_vcwprintf_s_l
+_vfprintf_l
+_vfprintf_p
+_vfprintf_p_l
+_vfprintf_s_l
+_vfwprintf_l
+_vfwprintf_p
+_vfwprintf_p_l
+_vfwprintf_s_l
+_vprintf_l
+_vprintf_p
+_vprintf_p_l
+_vprintf_s_l
+_vscprintf_l
+_vscprintf_p
+_vscprintf_p_l
+_vscwprintf_l
+_vscwprintf_p
+_vscwprintf_p_l
+_vsnprintf_c
+_vsnprintf_c_l
+_vsnprintf_l
+_vsnprintf_s
+_vsnprintf_s_l
+_vsnwprintf_l
+_vsnwprintf_s
+_vsnwprintf_s_l
+_vsprintf_l
+_vsprintf_p
+_vsprintf_p_l
+_vsprintf_s_l
+_vswprintf
+_vswprintf_c
+_vswprintf_c_l
+_vswprintf_l
+_vswprintf_p
+_vswprintf_p_l
+_vswprintf_s_l
+_vwprintf_l
+_vwprintf_p
+_vwprintf_p_l
+_vwprintf_s_l
+_waccess_s
+_wasctime_s
+_wcscoll_l
+_wcserror_s
+_wcsftime_l
+_wcsicmp_l
+_wcsicoll_l
+_wcslwr_l
+_wcslwr_s
+_wcslwr_s_l
+_wcsncoll_l
+_wcsnicmp_l
+_wcsnicoll_l
+_wcsnset_s
+_wcsset_s
+_wcstod_l
+_wcstoi64_l
+_wcstol_l
+_wcstombs_l
+_wcstombs_s_l
+_wcstoui64_l
+_wcstoul_l
+_wcsupr_l
+_wcsupr_s
+_wcsupr_s_l
+_wcsxfrm_l
+_wctime32_s
+_wctime64_s
+_wctomb_l
+_wctomb_s_l
+_wdupenv_s
+_wfopen_s
+_wfreopen_s
+_wgetenv_s
+_wmakepath_s
+_wmktemp_s
+_wprintf_l
+_wprintf_p
+_wprintf_p_l
+_wprintf_s_l
+_wputenv_s
+_wscanf_l
+_wscanf_s_l
+_wsearchenv_s
+_wsopen_s
+_wsplitpath_s
+_wstrdate_s
+_wstrtime_s
+_wtmpnam_s
+_wtof_l
+_wtoi64_l
+_wtoi_l
+_wtol_l
+_wutime32
+asctime_s
+bsearch_s
+btowc
+clearerr_s
+fopen_s
+fprintf_s
+fread_s
+freopen_s
+fscanf_s
+fwprintf_s
+fwscanf_s
+getenv_s
+gets_s
+mbrlen
+mbrtowc
+mbsrtowcs
+mbsrtowcs_s
+mbstowcs_s
+memcpy_s
+memmove_s
+printf_s
+scanf_s
+sprintf_s
+sscanf_s
+strcat_s
+strcpy_s
+strerror_s
+strncat_s
+strncpy_s
+strnlen
+strtok_s
+swprintf_s
+swscanf_s
+tanhf
+tmpfile_s
+tmpnam_s
+vfprintf_s
+vfwprintf_s
+vprintf_s
+vsprintf_s
+vswprintf_s
+vwprintf_s
+wcrtomb
+wcrtomb_s
+wcscat_s
+wcscpy_s
+wcsncat_s
+wcsncpy_s
+wcsnlen
+wcsrtombs
+wcsrtombs_s
+wcstok_s
+wcstombs_s
+wctob
+wctomb_s
+wprintf_s
+wscanf_s
